<resources>
    <string name="app_name">Ecommerce</string>
    <string name="category_icon">Category icon</string>
    <string name="select_category">Select category</string>
    <string name="view_all">view all</string>
    <string name="ic_phones">Phones</string>
    <string name="ic_computer">Computer</string>
    <string name="ic_health">Health</string>
    <string name="ic_books">Books</string>
    <string name="ic_tools">Tools</string>
    <string name="qr_code">QR code</string>
    <string name="hint_search">Search</string>
    <string name="hot_sales_banner">Hot sales banner</string>
    <string name="hot_sales_new">New</string>
    <string name="buy_now">Buy now!</string>
    <string name="like_button">Like button</string>
    <string name="location_icon">Location icon</string>
    <string name="location_chooser">Location chooser</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="cart">Cart</string>
    <string name="product_photo">Product photo</string>
    <string name="spec_icon">Spec icon</string>
    <string name="apply_icon">Apply icon</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_cart">My Cart</string>
    <string name="add_adress">Add address</string>
    <string name="item_photo">Item photo</string>
    <string name="clear_position">Clear position</string>
    <string name="minus_quantity">Minus quantity</string>
    <string name="plus_quantity">Plus quantity</string>
    <string name="best_seller">Best Seller</string>
    <string name="see_more">see more</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="bottom_filter_done">Done</string>
    <string name="bottom_filter_options">Filter options</string>
    <string name="bottom_filter_brand">Brand</string>
    <string name="bottom_filter_price">Price</string>
    <string name="bottom_filter_size">Size</string>
    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="cart_total">Total</string>
    <string name="cart_delivery">Delivery</string>
    <string name="cart_checkout">Checkout</string>
    <string name="main_city_example">Zihuatanejo, Gro</string>
    <string-array name="brands">
        <item>All</item>
        <item>Samsung</item>
        <item>Apple</item>
        <item>Xiaomi</item>
    </string-array>
    <string-array name="prices">
        <item>$0 - $100</item>
        <item>$100 - $300</item>
        <item>$300 - $500</item>
        <item>$500 - $2000</item>
    </string-array>
    <string-array name="sizes">
        <item>4.5 to 5.5 inches</item>
    </string-array>
</resources>
