<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="20dp"
    android:layout_marginEnd="10dp"
    tools:background="@color/color_primary">

    <ImageView
        android:id="@+id/image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/item_photo"
        android:src="@drawable/tools_image_cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Galaxy Note 20 Ultra" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$3000.00" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:layout_width="30dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_cart_quantity_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/trash"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/minus"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/minus_quantity"
            android:src="@drawable/ic_minus" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/plus_quantity"
            android:src="@drawable/ic_plus" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            tools:text="2" />
    </FrameLayout>

    <ImageView
        android:id="@+id/trash"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/clear_position"
        android:src="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>