<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:theme="@style/Theme.HotSales">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/hot_sales_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/tools_hot_sales_image" />

    <FrameLayout
        android:id="@+id/isNew"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/shape_qr_category"
        app:layout_constraintBottom_toTopOf="@id/centralBlock"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintVertical_chainStyle="spread">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hot_sales_new"
            android:textSize="10sp" />
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/centralBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buyButton"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/isNew">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="Iphone 12" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:textSize="11sp"
            tools:text="Súper. Mega. Rápido." />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:text="@string/buy_now"
        android:textAllCaps="false"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/centralBlock" />
</androidx.constraintlayout.widget.ConstraintLayout>
